...
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_plantlist"
    android:background="@drawable/background_gradient"
    tools:context=".ui.activity.PlantListActivity">

    <!-- Título superior -->
    <LinearLayout
        android:id="@+id/plant_selection_title"
...
